@@ -1,9 +1,6 @@
 package com.akimatBot.command.impl;
 
 import com.akimatBot.command.Command;
-import com.akimatBot.entity.enums.Language;
-import com.akimatBot.services.LanguageService;
-import com.akimatBot.utils.Const;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.api.objects.webapp.WebAppData;
@@ -11,12 +8,13 @@ import org.telegram.telegrambots.meta.api.objects.webapp.WebAppInfo;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class id003_Market extends Command {
 
     // it is about choosing language lmao
     @Override
-    public boolean  execute() throws TelegramApiException {
+    public boolean execute() throws TelegramApiException {
         deleteMessage(updateMessageId);
         sendWebApp();
         return EXIT;
@@ -44,7 +42,7 @@ public class id003_Market extends Command {
         inlineKeyboardButton.setText("QRestoran");
 
         InlineKeyboardMarkup replyKeyboardMarkup = new InlineKeyboardMarkup();
-        replyKeyboardMarkup.setKeyboard(Arrays.asList(Arrays.asList(inlineKeyboardButton)));
+        replyKeyboardMarkup.setKeyboard(List.of(List.of(inlineKeyboardButton)));
 
         sendMessageWithKeyboard("Нажмите кнопку", replyKeyboardMarkup);
     }
