@@ -3,6 +3,7 @@ package com.akimatBot.command.impl;
 
 import com.akimatBot.command.Command;
 import com.akimatBot.config.AppProperties;
+import com.akimatBot.entity.enums.WaitingType;
 import com.akimatBot.entity.standart.User;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
@@ -19,27 +20,30 @@ import java.util.List;
 public class id031_OpenLink extends Command {
 
     int deleteId;
+
     @Override
     public boolean execute() throws TelegramApiException, IOException, SQLException {
         deleteMessage(updateMessageId);
-        switch (waitingType){
-            case START:
-                updateMessageText = updateMessageText.replaceAll("/start", "");
-                updateMessageText = updateMessageText.replaceAll(" ", "");
-                Long id = Long.parseLong(updateMessageText);
-                User user = userRepository.findByChatId(chatId);
-                if ( user.getCurrentGuest() == null
-                        ||
-                        user.getCurrentGuest().getFoodOrder().getDesk().getId() == id){
-                    sendWebApp(id, user);
-                }
-                else {
-                    sendMessage("Вы сидите за столом №" +
-                            user.getCurrentGuest().getFoodOrder().getDesk().getId()
-                            + ", вам нельзя сканировать QR Code другого стола!");
-                }
+        if (waitingType == WaitingType.START) {
+            updateMessageText = updateMessageText.replaceAll("/start", "");
+            updateMessageText = updateMessageText.replaceAll(" ", "");
+            Long id = Long.parseLong(updateMessageText);
+            User user = userRepository.findByChatId(chatId);
+            if (user == null) {
+                user = new User();
+                user.setChatId(chatId);
+            }
+            if (user.getCurrentGuest() == null
+                    ||
+                    user.getCurrentGuest().getFoodOrder().getDesk().getId() == id) {
+                sendWebApp(id, user);
+            } else {
+                sendMessage("Вы сидите за столом №" +
+                        user.getCurrentGuest().getFoodOrder().getDesk().getId()
+                        + ", вам нельзя сканировать QR Code другого стола!");
+            }
 
-                return COMEBACK;
+            return COMEBACK;
         }
         return EXIT;
     }
@@ -48,6 +52,7 @@ public class id031_OpenLink extends Command {
         deleteMessage(updateMessageId);
         deleteMessage(deleteId);
     }
+
     private void sendWrongData() throws TelegramApiException {
         toDeleteMessage(sendMessage(18));
     }
@@ -55,14 +60,13 @@ public class id031_OpenLink extends Command {
 
     private List<String> getNames(User user) {
         List<String> names = new ArrayList<>();
-                names.add(user.getFullName());
+        names.add(user.getFullName());
         return names;
     }
 
 
-
     private void sendWebApp(long deskId, User user) throws TelegramApiException {
-        if (user.getLinkMessageId() != null){
+        if (user.getLinkMessageId() != null) {
             deleteMessage(user.getLinkMessageId().intValue());
         }
 
@@ -82,15 +86,12 @@ public class id031_OpenLink extends Command {
         inlineKeyboardButton.setText("Меню");
 
         InlineKeyboardMarkup replyKeyboardMarkup = new InlineKeyboardMarkup();
-        replyKeyboardMarkup.setKeyboard(Arrays.asList(Arrays.asList(inlineKeyboardButton)));
+        replyKeyboardMarkup.setKeyboard(List.of(List.of(inlineKeyboardButton)));
 
         long linkId = sendMessageWithKeyboard("Нажмите кнопку", replyKeyboardMarkup);
         user.setLinkMessageId(linkId);
         userRepository.save(user);
     }
-
-
-
 
 
 }
